# stm32f4xx_hal_app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stm32f4.resc
.github/: CODEOWNERS
cmake/modules/: cmsis.cmake  compiler_flags.cmake  freertos.cmake  mcu.cmake  postbuild.cmake
cmake/toolchains/: arm-gcc.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c  main.cpp
src/app/hw_config/: board.hpp  debug_uart.cpp  debug_uart.hpp  led.hpp
src/app/i3g4250d/: CMakeLists.txt  i3g4250d.hpp  i3g4250d.tpp  i3g4250d_port.cpp
src/app/led/: led.c  led.h
src/app/tasks/: console_tasks.cpp  console_tasks.hpp  led_tasks.cpp  led_tasks.hpp
src/config/: CMakeLists.txt  project_config.hpp
src/console/: CMakeLists.txt  console.cpp  console.hpp  console_task.cpp  console_task.hpp
src/hardware/: CMakeLists.txt
src/hardware/gpio/: CMakeLists.txt  gpio.hpp
src/hardware/spi/: CMakeLists.txt  spi.cpp  spi.hpp  spi_config.hpp  spi_internal.hpp
src/hardware/uart/: CMakeLists.txt  uart.cpp  uart.hpp  uart_config.hpp  uart_internal.hpp  uart_it.cpp
src/platform/: CMakeLists.txt
src/platform/core/: interrupt.cpp  interrupt.hpp  startup_stm32f411xe.s  stm32f411.ld  stm32f4xx_it.c  stm32f4xx_it.cpp  syscalls.c  system_clock.c  system_clock.h
src/platform/hal/: stm32f4xx_hal_conf.h
src/rtos/: CMakeLists.txt
src/rtos/include/: FreeRTOSConfig.h
